feat(mp): Image and icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="dist/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>My Website</title>
 </head>
@@ -12,7 +12,7 @@
 
     <!-- Navbar section -->
     <header class="header-wrapper">
-        <img class="logo" src="dist/img/revou.png" height="50px" alt="revou-logo">
+        <img class="logo" src="assets/img/revou.png" height="50px" alt="revou-logo">
         <div class="menu">
             <a href="" class="btn-menu">Home</a>
             <a href="#our-profile" class="btn-menu">Our Profile</a>
@@ -51,15 +51,15 @@
             </div>
             <div class="profile-img">
                     <div class="bulat">
-                        <img src="dist/img/womens.png" alt="img1">
+                        <img src="assets/img/teacher.jpeg" alt="img1">
                         <p>Professional Teacher</p>
                     </div>
                     <div class="bulat">
-                        <img src="dist/img/sports-field-of-elementary-school-marija-i-lina-studio-mau-doo_10.jpg" alt="img2">
+                        <img src="assets/img/field.jpeg" alt="img2">
                         <p>Sport Field</p>
                     </div>
                     <div class="bulat">
-                        <img src="dist/img/new-teacher-classroom-setup.jpg" alt="img3">
+                        <img src="assets/img/class.jpeg" alt="img3">
                         <p>Classroom</p>
                     </div>
             </div>
